# lmcache-prompt-demo

./: .gitignore  README.md  docker-compose.yml  hostess.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  demo_service.py  main.py  models.py  pin_analysis.py  proxy.py  routes.py  skills_install.py  skills_proxy.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/components/: app-shell.tsx  chunk-card.tsx  header.tsx  pin-analysis-panel.tsx  prompt-registry.tsx  register-prompt-dialog.tsx  skills-panel.tsx  stats-bar.tsx  storage-tier-column.tsx
frontend/components/ui/: badge.tsx  button.tsx  input.tsx  textarea.tsx
frontend/lib/: api.ts  types.ts  utils.ts
scripts/: requirements-gpu-stack.txt  setup_gpu_env.py  start.py
skills-proxy/: Dockerfile  package.json  server.mjs
